syntax = "proto3";

package pb;

import "user_create.proto";
import "user_login.proto";

import "google/api/annotations.proto";


option go_package = "github.com/csdengh/cur_blank/pb";


service SimpleBank {
    rpc CreateUser (CreateUserReq) returns (CreateUserRes) {
        option (google.api.http) = {
            post: "/v1/create_user"
            body: "*"
        };
    }
    rpc LoginUser (UserLoginReq) returns (UserLoginRes) {
        option (google.api.http) = {
            post: "/v1/login_user"
            body: "*"
        };
    }
}