syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/csdengh/cur_blank/pb";

message CreateUserReq {
    string username = 1;
    string full_name = 2;
    string email = 3;
    string password = 4;
}

message CreateUserRes {
    User user = 1;
}
